--- a/threads/Makefile.am
+++ b/threads/Makefile.am
@@ -28,9 +28,9 @@ endif
 
 libfftw3@PREC_SUFFIX@_omp_la_SOURCES = api.c conf.c openmp.c	\
 threads.h dft-vrank-geq1.c ct.c rdft-vrank-geq1.c hc2hc.c	\
-vrank-geq1-rdft2.c f77api.c f77funcs.h
+vrank-geq1-rdft2.c f77api.c f77funcs.h memory.c auto_dispatch.c numa_affinity.c init.c runtime.h 
 libfftw3@PREC_SUFFIX@_omp_la_CFLAGS = $(AM_CFLAGS) $(OPENMP_CFLAGS)
-libfftw3@PREC_SUFFIX@_omp_la_LDFLAGS = -version-info @SHARED_VERSION_INFO@
+libfftw3@PREC_SUFFIX@_omp_la_LDFLAGS = -version-info @SHARED_VERSION_INFO@ -lnuma -lpthread
 if !COMBINED_THREADS
 libfftw3@PREC_SUFFIX@_omp_la_LIBADD = ../libfftw3@PREC_SUFFIX@.la
 endif
